Fix width of cell containing action buttons.
The cell is too small by 1px on some browsers, which leads to ugly buttons-below-buttons.

--- a/styles/pass-list.scss
+++ b/styles/pass-list.scss
@@ -26,8 +26,8 @@
 		vertical-align: middle!important;
 
 		&.actions {
-			text-align: right;
-			min-width: 100px;
+			text-align: center;
+			min-width: 101px;
 		}
 	}
 
